Fix I18n when using as an engine in a different app

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,3 +15,6 @@ en:
         create: Create
       show:
         new: New
+      translations_with_key:
+        destroy: Destroy
+        confirm_destroy: Are you sure?
