Add ‘Copy to clipboard’ for keys

--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -18,3 +18,4 @@ nl:
       translations_with_key:
         destroy: Destroy
         confirm_destroy: Are you sure?
+        copy_to_clipboard: Kopieer
