--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -18,3 +18,4 @@ en:
       translations_with_key:
         destroy: Destroy
         confirm_destroy: Are you sure?
+        copy_to_clipboard: Copy
