--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -13,6 +13,7 @@ en:
         title: New translation
         path: 'Path:'
         create: Create
+        confirm_destroy_folder: Are you sure you want to delete the FOLDER %{folder}?
       show:
         new: New
         save: Save
