Added a search function

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -27,3 +27,5 @@ en:
         discard: Discard
         save: Save
         edit_in_editor: Editor
+      navigation_overview:
+        search: Search
