Added I18N `already_exists`

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,3 +28,4 @@ en:
         search: Search
         path: 'Path:'
         create: Create
+      already_exists: The translation already exists. Use <strong>Force</strong> to overwrite the existing translation.
