--- a/spec/dummy/config/locales/en.yml
+++ b/spec/dummy/config/locales/en.yml
@@ -1,31 +1,18 @@
-# Files in the config/locales directory are used for internationalization and
-# are automatically loaded by Rails. If you want to use locales other than
-# English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t "hello"
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t("hello") %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# To learn more about the API, please read the Rails Internationalization guide
-# at https://guides.rubyonrails.org/i18n.html.
-#
-# Be aware that YAML interprets the following case-insensitive strings as
-# booleans: `true`, `false`, `on`, `off`, `yes`, `no`. Therefore, these strings
-# must be quoted to be interpreted as strings. For example:
-#
-#     en:
-#       "yes": yup
-#       enabled: "ON"
-
 en:
-  hello: "Hello world"
+  greetings:
+    morning: 'Good morning'
+    evening: 'Good evening'
+    formal:
+      title: 'Dear Sir or Madam'
+      salutation: 'We hope this message finds you well'
+  actions:
+    save: 'Save'
+    delete: 'Delete'
+    confirm:
+      yes: 'Yes, proceed'
+      no: 'No, cancel'
+  errors:
+    not_found: 'Page not found'
+    server_error:
+      message: 'Something went wrong'
+      advice: 'Please try again later'
